--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,9 @@
 #mybatis.typeAliasesPackage : com.domain
 
 
-spring.datasource.url=jdbc:mysql://192.168.200.180:3306/db_signature
-spring.datasource.username=admin
-spring.datasource.password=Jwx65432!
+spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 mybatis.typeAliasesPackage=com.domain
 mybatis.mapperLocations=classpath:com/dao/xml/*.xml
