--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,13 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <!-- 排除默认的log4j及slf4j依赖 -->
+            <exclusions>
+            	<exclusion>
+            		<groupId>org.slf4j</groupId>
+            		<artifactId>log4j-over-slf4j</artifactId>
+            	</exclusion>
+            </exclusions>
         </dependency>
         <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
         <!-- 添加mysql jdbc驱动 -->
@@ -43,6 +50,13 @@
 		<dependency>
 		    <groupId>org.mybatis.spring.boot</groupId>
 		    <artifactId>mybatis-spring-boot-starter</artifactId>
+		    <!-- 排除默认的日志框架的依赖 -->
+		    <exclusions>
+		        <exclusion> 
+		            <groupId>org.springframework.boot</groupId>
+		            <artifactId>spring-boot-starter-logging</artifactId>
+		        </exclusion>
+		    </exclusions>
 		    <version>1.0.0</version>
 		</dependency>
 		<!-- 添加css、js文件的版本管理 -->
@@ -83,6 +97,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.6</version>
         </dependency>
+        <!-- log4j -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-log4j</artifactId>
+		</dependency>
 		<!-- <dependency>
 		    <groupId>org.mybatis</groupId>
 		    <artifactId>mybatis</artifactId>
