--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@
 #com.domain
 #mybatis.typeAliasesPackage : com.domain
 
+#debug=true
 
 spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.username=root
@@ -27,3 +28,8 @@ eureka.client.register-with-eureka = false
 eureka.client.fetch-registry = false
 eureka.client.serviceUrl.defaultZone = http://localhost:${server.port}/eureka/
 #mybatis.configLocation=classpath:mybatis-config.xml
+
+#logging
+#logging.level.org.springframework=WARN
+logging.level.com.dao=DEBUG
+#logging.file=logs/spring-boot-logging.log
